--- a/Example/Podfile
+++ b/Example/Podfile
@@ -1,6 +1,7 @@
+platform: ios, '11.0'
 use_frameworks!
 
-platform :ios, '9.0'
+#platform :ios, '9.0'
 
 target 'EasySwiftUIKit_Example' do
   pod 'EasySwiftUIKit', :path => '../'
